feat: privkey
