# address/v1/api.pb.go
@@ -98,8 +98,11 @@ type NewBip44Result struct {
 	PrivKey              string `protobuf:"bytes,2,opt,name=privKey,proto3" json:"privKey,omitempty"`
 	Id                   string `protobuf:"bytes,3,opt,name=id,proto3" json:"id,omitempty"`
 	WalletAddressSH      string `protobuf:"bytes,4,opt,name=walletAddressSH,proto3" json:"walletAddressSH,omitempty"`
-	WalletAddressWPKH    string `protobuf:"bytes,5,opt,name=walletAddressWPKH,proto3" json:"walletAddressWPKH,omitempty"`
-	WalletAddressTaproot string `protobuf:"bytes,6,opt,name=walletAddressTaproot,proto3" json:"walletAddressTaproot,omitempty"`
+	PrivKeySH            string `protobuf:"bytes,5,opt,name=privKeySH,proto3" json:"privKeySH,omitempty"`
+	WalletAddressWPKH    string `protobuf:"bytes,6,opt,name=walletAddressWPKH,proto3" json:"walletAddressWPKH,omitempty"`
+	PrivKeyWPKH          string `protobuf:"bytes,7,opt,name=privKeyWPKH,proto3" json:"privKeyWPKH,omitempty"`
+	WalletAddressTaproot string `protobuf:"bytes,8,opt,name=walletAddressTaproot,proto3" json:"walletAddressTaproot,omitempty"`
+	PrivKeyTaproot       string `protobuf:"bytes,9,opt,name=privKeyTaproot,proto3" json:"privKeyTaproot,omitempty"`
 }
 
 func (x *NewBip44Result) Reset() {
@@ -162,6 +165,13 @@ func (x *NewBip44Result) GetWalletAddressSH() string {
 	return ""
 }
 
+func (x *NewBip44Result) GetPrivKeySH() string {
+	if x != nil {
+		return x.PrivKeySH
+	}
+	return ""
+}
+
 func (x *NewBip44Result) GetWalletAddressWPKH() string {
 	if x != nil {
 		return x.WalletAddressWPKH
@@ -169,9 +179,23 @@ func (x *NewBip44Result) GetWalletAddressWPKH() string {
 	return ""
 }
 
+func (x *NewBip44Result) GetPrivKeyWPKH() string {
+	if x != nil {
+		return x.PrivKeyWPKH
+	}
+	return ""
+}
+
 func (x *NewBip44Result) GetWalletAddressTaproot() string {
 	if x != nil {
 		return x.WalletAddressTaproot
+	}
+	return ""
+}
+
+func (x *NewBip44Result) GetPrivKeyTaproot() string {
+	if x != nil {
+		return x.PrivKeyTaproot
 	}
 	return ""
 }
@@ -269,7 +293,7 @@ var file_address_v1_api_proto_rawDesc = []byte{
 	0x08, 0x6d, 0x6e, 0x65, 0x6d, 0x6f, 0x6e, 0x69, 0x63, 0x12, 0x1b, 0x0a, 0x04, 0x70, 0x61, 0x73,
 	0x73, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x42, 0x07, 0xfa, 0x42, 0x04, 0x72, 0x02, 0x10, 0x00,
 	0x52, 0x04, 0x70, 0x61, 0x73, 0x73, 0x12, 0x14, 0x0a, 0x05, 0x69, 0x6e, 0x64, 0x65, 0x78, 0x18,
-	0x05, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x05, 0x69, 0x6e, 0x64, 0x65, 0x78, 0x22, 0xec, 0x01, 0x0a,
+	0x05, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x05, 0x69, 0x6e, 0x64, 0x65, 0x78, 0x22, 0xd4, 0x02, 0x0a,
 	0x0e, 0x4e, 0x65, 0x77, 0x42, 0x69, 0x70, 0x34, 0x34, 0x52, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x12,
 	0x24, 0x0a, 0x0d, 0x77, 0x61, 0x6c, 0x6c, 0x65, 0x74, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73,
 	0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0d, 0x77, 0x61, 0x6c, 0x6c, 0x65, 0x74, 0x41, 0x64,
@@ -278,59 +302,65 @@ var file_address_v1_api_proto_rawDesc = []byte{
 	0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x12,
 	0x28, 0x0a, 0x0f, 0x77, 0x61, 0x6c, 0x6c, 0x65, 0x74, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73,
 	0x53, 0x48, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0f, 0x77, 0x61, 0x6c, 0x6c, 0x65, 0x74,
-	0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x53, 0x48, 0x12, 0x2c, 0x0a, 0x11, 0x77, 0x61, 0x6c,
-	0x6c, 0x65, 0x74, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x57, 0x50, 0x4b, 0x48, 0x18, 0x05,
-	0x20, 0x01, 0x28, 0x09, 0x52, 0x11, 0x77, 0x61, 0x6c, 0x6c, 0x65, 0x74, 0x41, 0x64, 0x64, 0x72,
-	0x65, 0x73, 0x73, 0x57, 0x50, 0x4b, 0x48, 0x12, 0x32, 0x0a, 0x14, 0x77, 0x61, 0x6c, 0x6c, 0x65,
+	0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x53, 0x48, 0x12, 0x1c, 0x0a, 0x09, 0x70, 0x72, 0x69,
+	0x76, 0x4b, 0x65, 0x79, 0x53, 0x48, 0x18, 0x05, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x70, 0x72,
+	0x69, 0x76, 0x4b, 0x65, 0x79, 0x53, 0x48, 0x12, 0x2c, 0x0a, 0x11, 0x77, 0x61, 0x6c, 0x6c, 0x65,
+	0x74, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x57, 0x50, 0x4b, 0x48, 0x18, 0x06, 0x20, 0x01,
+	0x28, 0x09, 0x52, 0x11, 0x77, 0x61, 0x6c, 0x6c, 0x65, 0x74, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73,
+	0x73, 0x57, 0x50, 0x4b, 0x48, 0x12, 0x20, 0x0a, 0x0b, 0x70, 0x72, 0x69, 0x76, 0x4b, 0x65, 0x79,
+	0x57, 0x50, 0x4b, 0x48, 0x18, 0x07, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0b, 0x70, 0x72, 0x69, 0x76,
+	0x4b, 0x65, 0x79, 0x57, 0x50, 0x4b, 0x48, 0x12, 0x32, 0x0a, 0x14, 0x77, 0x61, 0x6c, 0x6c, 0x65,
 	0x74, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x54, 0x61, 0x70, 0x72, 0x6f, 0x6f, 0x74, 0x18,
-	0x06, 0x20, 0x01, 0x28, 0x09, 0x52, 0x14, 0x77, 0x61, 0x6c, 0x6c, 0x65, 0x74, 0x41, 0x64, 0x64,
-	0x72, 0x65, 0x73, 0x73, 0x54, 0x61, 0x70, 0x72, 0x6f, 0x6f, 0x74, 0x22, 0x87, 0x01, 0x0a, 0x0d,
-	0x4e, 0x65, 0x77, 0x42, 0x69, 0x70, 0x34, 0x34, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x12, 0x18, 0x0a,
-	0x07, 0x73, 0x75, 0x63, 0x63, 0x65, 0x73, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x08, 0x52, 0x07,
-	0x73, 0x75, 0x63, 0x63, 0x65, 0x73, 0x73, 0x12, 0x12, 0x0a, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x18,
-	0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x6d,
-	0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x6d, 0x65,
-	0x73, 0x73, 0x61, 0x67, 0x65, 0x12, 0x2e, 0x0a, 0x04, 0x64, 0x61, 0x74, 0x61, 0x18, 0x04, 0x20,
-	0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x2e, 0x76, 0x31,
-	0x2e, 0x4e, 0x65, 0x77, 0x42, 0x69, 0x70, 0x34, 0x34, 0x52, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x52,
-	0x04, 0x64, 0x61, 0x74, 0x61, 0x32, 0xa3, 0x01, 0x0a, 0x09, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73,
-	0x73, 0x56, 0x31, 0x12, 0x7e, 0x0a, 0x08, 0x4e, 0x65, 0x77, 0x42, 0x69, 0x70, 0x34, 0x34, 0x12,
-	0x1b, 0x2e, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x4e, 0x65, 0x77,
-	0x42, 0x69, 0x70, 0x34, 0x34, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x19, 0x2e, 0x61,
-	0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x4e, 0x65, 0x77, 0x42, 0x69, 0x70,
-	0x34, 0x34, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x3a, 0x92, 0x41, 0x0e, 0x12, 0x0c, 0xe7, 0x94,
-	0x9f, 0xe6, 0x96, 0xb0, 0xe5, 0x9c, 0xb0, 0xe5, 0x9d, 0x80, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x23,
-	0x3a, 0x01, 0x2a, 0x22, 0x1e, 0x2f, 0x63, 0x68, 0x61, 0x69, 0x6e, 0x2f, 0x63, 0x72, 0x65, 0x61,
-	0x74, 0x65, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x42, 0x79, 0x4d, 0x6e, 0x65, 0x6d, 0x6f,
-	0x6e, 0x69, 0x63, 0x1a, 0x16, 0x92, 0x41, 0x13, 0x12, 0x11, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73,
-	0x73, 0x20, 0x41, 0x50, 0x49, 0xe6, 0x8e, 0xa5, 0xe5, 0x8f, 0xa3, 0x42, 0x9b, 0x03, 0x92, 0x41,
-	0xf4, 0x02, 0x12, 0x19, 0x0a, 0x12, 0xe4, 0xbf, 0xa1, 0xe6, 0x81, 0xaf, 0xe6, 0x9c, 0x8d, 0xe5,
-	0x8a, 0xa1, 0xe6, 0x96, 0x87, 0xe6, 0xa1, 0xa3, 0x32, 0x03, 0x31, 0x2e, 0x30, 0x2a, 0x02, 0x01,
-	0x02, 0x32, 0x10, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a,
-	0x73, 0x6f, 0x6e, 0x32, 0x16, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e,
-	0x2f, 0x78, 0x2d, 0x66, 0x6f, 0x6f, 0x2d, 0x6d, 0x69, 0x6d, 0x65, 0x3a, 0x10, 0x61, 0x70, 0x70,
-	0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x3a, 0x16, 0x61,
-	0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x78, 0x2d, 0x66, 0x6f, 0x6f,
-	0x2d, 0x6d, 0x69, 0x6d, 0x65, 0x52, 0xeb, 0x01, 0x0a, 0x03, 0x35, 0x30, 0x30, 0x12, 0xe3, 0x01,
-	0x0a, 0x0c, 0x53, 0x65, 0x72, 0x76, 0x65, 0x72, 0x20, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x12, 0x11,
-	0x0a, 0x0f, 0x1a, 0x0d, 0x2e, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x73, 0x2e, 0x45, 0x72, 0x72, 0x6f,
-	0x72, 0x1a, 0xbf, 0x01, 0x0a, 0x10, 0x58, 0x2d, 0x43, 0x6f, 0x72, 0x72, 0x65, 0x6c, 0x61, 0x74,
-	0x69, 0x6f, 0x6e, 0x2d, 0x49, 0x64, 0x12, 0xaa, 0x01, 0x0a, 0x2b, 0x55, 0x6e, 0x69, 0x71, 0x75,
-	0x65, 0x20, 0x65, 0x76, 0x65, 0x6e, 0x74, 0x20, 0x69, 0x64, 0x65, 0x6e, 0x74, 0x69, 0x66, 0x69,
-	0x65, 0x72, 0x20, 0x66, 0x6f, 0x72, 0x20, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x20, 0x72, 0x65,
-	0x71, 0x75, 0x65, 0x73, 0x74, 0x73, 0x12, 0x06, 0x73, 0x74, 0x72, 0x69, 0x6e, 0x67, 0x1a, 0x04,
-	0x75, 0x75, 0x69, 0x64, 0x32, 0x26, 0x22, 0x32, 0x34, 0x33, 0x38, 0x61, 0x63, 0x33, 0x63, 0x2d,
-	0x33, 0x37, 0x65, 0x62, 0x2d, 0x34, 0x39, 0x30, 0x32, 0x2d, 0x61, 0x64, 0x65, 0x66, 0x2d, 0x65,
-	0x64, 0x31, 0x36, 0x62, 0x34, 0x34, 0x33, 0x31, 0x30, 0x33, 0x30, 0x22, 0x6a, 0x45, 0x5e, 0x5b,
-	0x30, 0x2d, 0x39, 0x41, 0x2d, 0x46, 0x5d, 0x7b, 0x38, 0x7d, 0x2d, 0x5b, 0x30, 0x2d, 0x39, 0x41,
-	0x2d, 0x46, 0x5d, 0x7b, 0x34, 0x7d, 0x2d, 0x34, 0x5b, 0x30, 0x2d, 0x39, 0x41, 0x2d, 0x46, 0x5d,
-	0x7b, 0x33, 0x7d, 0x2d, 0x5b, 0x38, 0x39, 0x41, 0x42, 0x5d, 0x5b, 0x30, 0x2d, 0x39, 0x41, 0x2d,
-	0x46, 0x5d, 0x7b, 0x33, 0x7d, 0x2d, 0x5b, 0x30, 0x2d, 0x39, 0x41, 0x2d, 0x46, 0x5d, 0x7b, 0x31,
-	0x32, 0x7d, 0x24, 0x5a, 0x11, 0x0a, 0x0f, 0x0a, 0x09, 0x42, 0x61, 0x73, 0x69, 0x63, 0x41, 0x75,
-	0x74, 0x68, 0x12, 0x02, 0x08, 0x01, 0x5a, 0x21, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63,
-	0x6f, 0x6d, 0x2f, 0x67, 0x6b, 0x78, 0x69, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x64, 0x64, 0x72,
-	0x65, 0x73, 0x73, 0x2f, 0x76, 0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f,
-	0x33,
+	0x08, 0x20, 0x01, 0x28, 0x09, 0x52, 0x14, 0x77, 0x61, 0x6c, 0x6c, 0x65, 0x74, 0x41, 0x64, 0x64,
+	0x72, 0x65, 0x73, 0x73, 0x54, 0x61, 0x70, 0x72, 0x6f, 0x6f, 0x74, 0x12, 0x26, 0x0a, 0x0e, 0x70,
+	0x72, 0x69, 0x76, 0x4b, 0x65, 0x79, 0x54, 0x61, 0x70, 0x72, 0x6f, 0x6f, 0x74, 0x18, 0x09, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x0e, 0x70, 0x72, 0x69, 0x76, 0x4b, 0x65, 0x79, 0x54, 0x61, 0x70, 0x72,
+	0x6f, 0x6f, 0x74, 0x22, 0x87, 0x01, 0x0a, 0x0d, 0x4e, 0x65, 0x77, 0x42, 0x69, 0x70, 0x34, 0x34,
+	0x52, 0x65, 0x70, 0x6c, 0x79, 0x12, 0x18, 0x0a, 0x07, 0x73, 0x75, 0x63, 0x63, 0x65, 0x73, 0x73,
+	0x18, 0x01, 0x20, 0x01, 0x28, 0x08, 0x52, 0x07, 0x73, 0x75, 0x63, 0x63, 0x65, 0x73, 0x73, 0x12,
+	0x12, 0x0a, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x63,
+	0x6f, 0x64, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x18, 0x03,
+	0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x12, 0x2e, 0x0a,
+	0x04, 0x64, 0x61, 0x74, 0x61, 0x18, 0x04, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x61, 0x64,
+	0x64, 0x72, 0x65, 0x73, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x4e, 0x65, 0x77, 0x42, 0x69, 0x70, 0x34,
+	0x34, 0x52, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x52, 0x04, 0x64, 0x61, 0x74, 0x61, 0x32, 0xa3, 0x01,
+	0x0a, 0x09, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x56, 0x31, 0x12, 0x7e, 0x0a, 0x08, 0x4e,
+	0x65, 0x77, 0x42, 0x69, 0x70, 0x34, 0x34, 0x12, 0x1b, 0x2e, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73,
+	0x73, 0x2e, 0x76, 0x31, 0x2e, 0x4e, 0x65, 0x77, 0x42, 0x69, 0x70, 0x34, 0x34, 0x52, 0x65, 0x71,
+	0x75, 0x65, 0x73, 0x74, 0x1a, 0x19, 0x2e, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x2e, 0x76,
+	0x31, 0x2e, 0x4e, 0x65, 0x77, 0x42, 0x69, 0x70, 0x34, 0x34, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22,
+	0x3a, 0x92, 0x41, 0x0e, 0x12, 0x0c, 0xe7, 0x94, 0x9f, 0xe6, 0x96, 0xb0, 0xe5, 0x9c, 0xb0, 0xe5,
+	0x9d, 0x80, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x23, 0x3a, 0x01, 0x2a, 0x22, 0x1e, 0x2f, 0x63, 0x68,
+	0x61, 0x69, 0x6e, 0x2f, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73,
+	0x73, 0x42, 0x79, 0x4d, 0x6e, 0x65, 0x6d, 0x6f, 0x6e, 0x69, 0x63, 0x1a, 0x16, 0x92, 0x41, 0x13,
+	0x12, 0x11, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x20, 0x41, 0x50, 0x49, 0xe6, 0x8e, 0xa5,
+	0xe5, 0x8f, 0xa3, 0x42, 0x9b, 0x03, 0x92, 0x41, 0xf4, 0x02, 0x12, 0x19, 0x0a, 0x12, 0xe4, 0xbf,
+	0xa1, 0xe6, 0x81, 0xaf, 0xe6, 0x9c, 0x8d, 0xe5, 0x8a, 0xa1, 0xe6, 0x96, 0x87, 0xe6, 0xa1, 0xa3,
+	0x32, 0x03, 0x31, 0x2e, 0x30, 0x2a, 0x02, 0x01, 0x02, 0x32, 0x10, 0x61, 0x70, 0x70, 0x6c, 0x69,
+	0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x32, 0x16, 0x61, 0x70, 0x70,
+	0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x78, 0x2d, 0x66, 0x6f, 0x6f, 0x2d, 0x6d,
+	0x69, 0x6d, 0x65, 0x3a, 0x10, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e,
+	0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x3a, 0x16, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69,
+	0x6f, 0x6e, 0x2f, 0x78, 0x2d, 0x66, 0x6f, 0x6f, 0x2d, 0x6d, 0x69, 0x6d, 0x65, 0x52, 0xeb, 0x01,
+	0x0a, 0x03, 0x35, 0x30, 0x30, 0x12, 0xe3, 0x01, 0x0a, 0x0c, 0x53, 0x65, 0x72, 0x76, 0x65, 0x72,
+	0x20, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x12, 0x11, 0x0a, 0x0f, 0x1a, 0x0d, 0x2e, 0x65, 0x72, 0x72,
+	0x6f, 0x72, 0x73, 0x2e, 0x45, 0x72, 0x72, 0x6f, 0x72, 0x1a, 0xbf, 0x01, 0x0a, 0x10, 0x58, 0x2d,
+	0x43, 0x6f, 0x72, 0x72, 0x65, 0x6c, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2d, 0x49, 0x64, 0x12, 0xaa,
+	0x01, 0x0a, 0x2b, 0x55, 0x6e, 0x69, 0x71, 0x75, 0x65, 0x20, 0x65, 0x76, 0x65, 0x6e, 0x74, 0x20,
+	0x69, 0x64, 0x65, 0x6e, 0x74, 0x69, 0x66, 0x69, 0x65, 0x72, 0x20, 0x66, 0x6f, 0x72, 0x20, 0x73,
+	0x65, 0x72, 0x76, 0x65, 0x72, 0x20, 0x72, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x73, 0x12, 0x06,
+	0x73, 0x74, 0x72, 0x69, 0x6e, 0x67, 0x1a, 0x04, 0x75, 0x75, 0x69, 0x64, 0x32, 0x26, 0x22, 0x32,
+	0x34, 0x33, 0x38, 0x61, 0x63, 0x33, 0x63, 0x2d, 0x33, 0x37, 0x65, 0x62, 0x2d, 0x34, 0x39, 0x30,
+	0x32, 0x2d, 0x61, 0x64, 0x65, 0x66, 0x2d, 0x65, 0x64, 0x31, 0x36, 0x62, 0x34, 0x34, 0x33, 0x31,
+	0x30, 0x33, 0x30, 0x22, 0x6a, 0x45, 0x5e, 0x5b, 0x30, 0x2d, 0x39, 0x41, 0x2d, 0x46, 0x5d, 0x7b,
+	0x38, 0x7d, 0x2d, 0x5b, 0x30, 0x2d, 0x39, 0x41, 0x2d, 0x46, 0x5d, 0x7b, 0x34, 0x7d, 0x2d, 0x34,
+	0x5b, 0x30, 0x2d, 0x39, 0x41, 0x2d, 0x46, 0x5d, 0x7b, 0x33, 0x7d, 0x2d, 0x5b, 0x38, 0x39, 0x41,
+	0x42, 0x5d, 0x5b, 0x30, 0x2d, 0x39, 0x41, 0x2d, 0x46, 0x5d, 0x7b, 0x33, 0x7d, 0x2d, 0x5b, 0x30,
+	0x2d, 0x39, 0x41, 0x2d, 0x46, 0x5d, 0x7b, 0x31, 0x32, 0x7d, 0x24, 0x5a, 0x11, 0x0a, 0x0f, 0x0a,
+	0x09, 0x42, 0x61, 0x73, 0x69, 0x63, 0x41, 0x75, 0x74, 0x68, 0x12, 0x02, 0x08, 0x01, 0x5a, 0x21,
+	0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x67, 0x6b, 0x78, 0x69, 0x2f,
+	0x61, 0x70, 0x69, 0x2f, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x2f, 0x76, 0x31, 0x3b, 0x76,
+	0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
